单独的曲线页面，快完成了

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -177,6 +177,11 @@
                             <span class="icon" onclick="nextPage()"></span>
                         </div>
 
+                        <div class="orderPopup">
+                            <iframe src="${contextPath!}/layout/orderPopup"></iframe>
+                        </div>
+
+
                         <div class="leftContent">
                             <!--第一行-->
                             <div class="l-top">
