样式小修改

--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -27,10 +27,10 @@
         </ul>
     </nav>
     <div class="main">
-        <div class="list" hidden>
+        <div class="list">
             <div class="toCurve"></div>
         </div>
-        <div class="curve">
+        <div class="curve" hidden>
             <header>
                 <ul class="title">
                     <li>实验室编号：<span id="center_sybh_id_world"></span></li>
