--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -10,83 +10,91 @@
 ##}
 
 
-    <!--这里是后面4屏的代码-->
+        <!--这里是后面4屏的代码-->
+        <div class="btn-back">
+                <span class="icon"></span>
+            <!--<span>返回总状态</span>-->
+        </div>
+        <div class="tab">
+            <ul>
+                <li class="tab-item active_right">实验室状态</li>
+                <li class="tab-item">数据结果</li>
+                <li class="tab-item">数据挖掘</li>
+            </ul>
+        </div>
+        <div class="labIcon">
+            <ul>
+                <li class="lab_item">
+                    <img src="${contextPath!}/static/img/tabCom/yf_off.png" alt="">
+                    <span class="text">研发实验室</span>
+                </li>
+                <li class="lab_item">
+                    <img src="${contextPath!}/static/img/tabCom/zx_off.png" alt="">
+                    <span class="text">中心实验室</span>
+                </li>
+                <li class="lab_item">
+                    <img src="${contextPath!}/static/img/tabCom/gc_off.png" alt="">
+                    <span class="text">工厂实验室</span>
+                </li>
+                <li class="lab_item">
+                    <img src="${contextPath!}/static/img/tabCom/mks_off.png" alt="">
+                    <span class="text">模块商实验室</span>
+                </li>
+            </ul>
+        </div>
 
-    <div class="tab">
-        <ul>
-            <li class="tab-item active_right">实验室状态</li>
-            <li class="tab-item">数据结果</li>
-            <li class="tab-item">数据挖掘</li>
-        </ul>
+
+        <!--实验室状态-->
+        ##layout("tab/tab2.html", {}){
+        ##}
+        <!--数据结果-->
+        ##layout("tab/tab3.html", {}){
+        ##}
+        <!--数据挖掘应用-->
+        ##layout("tab/tab4.html", {}){
+        ##}
+
     </div>
-    <div class="labIcon">
-        <ul>
-            <li class="lab_item">
-                <img src="${contextPath!}/static/img/tabCom/yf_off.png" alt="">
-                <span class="text">研发实验室</span>
-            </li>
-            <li class="lab_item">
-                <img src="${contextPath!}/static/img/tabCom/zx_off.png" alt="">
-                <span class="text">中心实验室</span>
-            </li>
-            <li class="lab_item">
-                <img src="${contextPath!}/static/img/tabCom/gc_off.png" alt="">
-                <span class="text">工厂实验室</span>
-            </li>
-            <li class="lab_item">
-                <img src="${contextPath!}/static/img/tabCom/mks_off.png" alt="">
-                <span class="text">模块商实验室</span>
-            </li>
-        </ul>
-    </div>
+    <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
+    <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
+    <script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>
+    <script src="${contextPath!}/static/js/tabs/tab3.js?time=New Date()"></script>
+    <script src="${contextPath!}/static/js/tabs/tab4.js?time=New Date()"></script>
+    <script>
+        var labTypeCode;//实验室类型
 
-
-    <!--实验室状态-->
-    ##layout("tab/tab2.html", {}){
-    ##}
-    <!--数据结果-->
-    ##layout("tab/tab3.html", {}){
-    ##}
-    <!--数据挖掘应用-->
-    ##layout("tab/tab4.html", {}){
-    ##}
-
-</div>
-<script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
-<script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tabs/tab3.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tabs/tab4.js?time=New Date()"></script>
-<script>
-    var labTypeCode;//实验室类型
-
-    $(function () {
+        $(function () {
+            // 返回新封面
+            $(".btn-back").click(function () {
+                $("#cover").show().siblings().not(".l").hide()
+                    .siblings("#cover").find(".deviceLoad .btn-back").click();
+            });
 //    右四屏顶部三个大标签的切换
-        $(".tab-item").click(function () {
-            $(this).addClass("active_right").siblings().removeClass("active_right");
-            // 3. 获取到当前菜单的索引号
-            var index = $(this).index();
-            // 4. 通过索引号对应关系 让这个索引号对应的内容展示出来
-            $("#r .box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
-            // console.log("下右侧面开始图表重置");
-            resetSizeRight();
-        });
+            $(".tab-item").click(function () {
+                $(this).addClass("active_right").siblings().removeClass("active_right");
+                // 3. 获取到当前菜单的索引号
+                var index = $(this).index();
+                // 4. 通过索引号对应关系 让这个索引号对应的内容展示出来
+                $("#r .box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
+                // console.log("下右侧面开始图表重置");
+                resetSizeRight();
+            });
 
 
 //        上一页 下一页
-        $('#tab2 .fenye .last').click(function () {
-            $('#tab2').css('left','-100%');
-        });
-        
-        $('#tab2 .fenye .first').click(function () {
-            $('#tab2').css('left','0');
-        });
-        //雷达图的透明度
-        $('.biaozhun_tabs>ul>li').click(function () {
-            $(this).addClass('biaozhun_tabs_selected').siblings('li').removeClass('biaozhun_tabs_selected');
-            var index=$(this).index();
-            $(".biaozhun_box_echarts:eq(" + index + ")").css("opacity",'1').siblings().css('opacity','0');
-        })
-    });
+            $('#tab2 .fenye .last').click(function () {
+                $('#tab2').css('left', '-100%');
+            });
 
-</script>
+            $('#tab2 .fenye .first').click(function () {
+                $('#tab2').css('left', '0');
+            });
+            //雷达图的透明度
+            $('.biaozhun_tabs>ul>li').click(function () {
+                $(this).addClass('biaozhun_tabs_selected').siblings('li').removeClass('biaozhun_tabs_selected');
+                var index = $(this).index();
+                $(".biaozhun_box_echarts:eq(" + index + ")").css("opacity", '1').siblings().css('opacity', '0');
+            })
+        });
+
+    </script>
