修复弹出页面细节

--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -103,7 +103,7 @@
     }
 
     $(function () {
-        $("html").css("font-size",bodyScale*100+"%");
+        $("html").css("font-size",bodyScale*16+"px");
         leftNavAction();
     })
 </script>
