--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -51,133 +51,21 @@
                             <div class="labMain_cbl_one">
                                 <div class="labMain_cblt_tone labMain_cblt_tone_world">
                                 </div>
-                                <!--labMain_cblt_tone-->
                                 <div class="labMain_cblt_ttwo labMain_cblt_ttwo_world"><img
                                         src=""/>
                                 </div>
-                                <!--labMain_cblt_ttwo-->
                             </div>
                         </div>
                     </div>
                     <!--运营状态-->
-                    <!--
-                                    <div class="item status">
-                                        <div class="labMain_cb_left">
-                                            <div class="pageBtn">
-                                                <span class="icon" onclick="prePage()"></span>
-                                                <span class="icon" onclick="nextPage()"></span>
-                                            </div>
-
-                                            <div class="leftContent">
-                                                &lt;!&ndash;第一行&ndash;&gt;
-                                                <div class="l-top">
-                                                    <div class="l-top-title">
-                                                        <h3>实验室状态</h3>
-                                                    </div>
-                                                    <div class="l-top-header">
-                                                        <div class="item1">
-                                                            <h5>实验室总数：</h5>
-                                                            <span class="data" id="lab_center_id_left_0">0</span>
-                                                        </div>
-                                                        <div class="item2" id="lab_center_id_left_1">
-                                                            <h5>负荷率最低：</h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                                                                     aria-valuemin="0"
-                                                                     aria-valuemax="100" style="width: 80%;height: 100%"></div>
-                                                            </div>
-                                                            <span class="data">80%</span>
-                                                        </div>
-                                                        <div class="item3" id="lab_center_id_left_2">
-                                                            <h5>负荷率最高：</h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar" role="progressbar" aria-valuenow="90"
-                                                                     aria-valuemin="0"
-                                                                     aria-valuemax="100" style="width: 90%;height: 100%"></div>
-                                                            </div>
-                                                            <span class="data">90%</span>
-                                                        </div>
-                                                        <div class="item4" id="lab_center_id_left_3">
-                                                            <h5>平均负荷率：</h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar" role="progressbar" aria-valuenow="85"
-                                                                     aria-valuemin="0"
-                                                                     aria-valuemax="100" style="width: 85%;height: 100%"></div>
-                                                            </div>
-                                                            <span class="data">85%</span>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="l-top-body" id="center_lab_top_div">
-                                                    </div>
-                                                </div>
-                                                &lt;!&ndash;第二行&ndash;&gt;
-                                                <div class="l-mid">
-                                                    <div class="l-mid-title">
-                                                        <h3>设备状态</h3>
-                                                    </div>
-                                                    <div class="l-mid-header">
-                                                        <div class="item1">
-                                                            <h5>设备总数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_4">0</span>
-                                                        </div>
-                                                        <div class="item2">
-                                                            <h5>当年故障数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_6"></span>
-                                                        </div>
-                                                        <div class="item3">
-                                                            <h5>当前完好数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_5"></span>
-                                                        </div>
-                                                        <div class="item4" id="lab_center_id_left_7">
-                                                            <h5>当前完好率：<span></span></h5>
-                                                            <div class="progress">
-                                                                <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                                                                     aria-valuemin="0"
-                                                                     aria-valuemax="100" style="width: 98%;height: 100%"></div>
-                                                            </div>
-                                                            <span class="data">98%</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="l-mid-body" id="center_lab_center_div">
-                                                    </div>
-
-                                                </div>
-                                                &lt;!&ndash;第三行&ndash;&gt;
-                                                <div class="l-bottom">
-                                                    <div class="l-bottom-title">
-                                                        <h3>订单状态</h3>
-                                                    </div>
-                                                    <div class="l-bottom-header">
-                                                        <div class="item1">
-                                                            <h5>已测订单数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_8"></span>
-                                                        </div>
-                                                        <div class="item1">
-                                                            <h5>在测订单数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_9"></span>
-                                                        </div>
-                                                        <div class="item1">
-                                                            <h5>待测订单数：<span></span></h5>
-                                                            <span class="data" id="lab_center_id_left_10"></span>
-                                                        </div>
-                                                        &lt;!&ndash;<div class="item1"></div>&ndash;&gt;
-                                                    </div>
-                                                    <div class="l-bottom-body" id="center_lab_bottom_div">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                    -->
                     <div class="item status">
                         <div class="labMain_cb_left">
                             <div class="pageBtn">
-                                <span class="icon" onclick="prePage()"></span>
-                                <span class="icon" onclick="nextPage()"></span>
+                                <span class="icon pre"></span>
+                                <span class="icon next"></span>
                             </div>
 
-                            <div class="orderPopup show" hidden>
+                            <div class="orderPopup" hidden>
                                 <div class="close"></div>
                                 <iframe src="${contextPath!}/layout/orderPopup"></iframe>
                             </div>
@@ -188,6 +76,7 @@
                                         <h3>实验室状态</h3>
                                     </div>
                                     <div class="l-top-header">
+<!--
                                         <div class="item1">
                                             <h5>实验室总数：</h5>
                                             <span class="data" id="lab_center_id_left_0">57</span>
@@ -213,6 +102,7 @@
                                             </div>
                                             <span class="data">92.7%</span>
                                         </div>
+-->
                                     </div>
 
                                     <div class="l-top-body" id="center_lab_top_div">
@@ -331,19 +221,19 @@
                                     </div>
                                     <div class="l-mid-body" id="center_lab_center_div">
                                         <div class="l-mid-body-1"><h4>制冷器具性能室</h4>
-                                            <div class="item4">
+                                            <div class="item">
                                                 <h5>设备数：</h5>
                                                 <span class="data">85</span>
                                             </div>
-                                            <div class="item1">
+                                            <div class="item">
                                                 <h5>当年故障数：</h5>
                                                 <span class="data">6台次</span>
                                             </div>
-                                            <div class="item2">
+                                            <div class="item">
                                                 <h5>当前完好数：</h5>
                                                 <span class="data">83</span>
                                             </div>
-                                            <div class="item3"><h5>当前完好率：</h5>
+                                            <div class="item"><h5>当前完好率：</h5>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar"></div>
                                                 </div>
@@ -721,14 +611,16 @@
         }
     </script>
     <script src="../static/js/centerLab.js"></script>
-    <script src="../static/js/centerLabWorld.js"></script>
+    <script src="../static/js/centerLabWorld_3rd.js"></script>
     <script src="../static/js/labData.js"></script>
     <script src="../static/js/labAction.js"></script>
-    <script src="../static/asserts/video/swfobject.js?time=New Date()"></script>
+    <!--<script src="../static/asserts/video/swfobject.js?time=New Date()"></script>-->
     <!--来自centerlabWorld,待整理-->
 
     <script>
         $(function () {
+
+
             //中心实验室顶上的“返回总状态”和“中海博睿实验室”两个按钮
             var $labMain_ct_btn = $(".labMain_content_country .labMain_ct_btn");
             $labMain_ct_btn.eq(0).hover(function () {
