--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -230,7 +230,8 @@
 </div>
 <script src="${contextPath!}/static/js/cover.js"></script>
 <script>
-var orderNums=19;//每分钟上限19个订单
+var isRandom=false;//是否是随机订单
+var orderNums=6;//如果是true每分钟上限6个订单，否则固定orderNums个
 var dataSecond=[];
 var mInterval;
 var num=0;
@@ -239,10 +240,12 @@ $(function(){
 	start();
 	//incrementNumber()
 });
+//启动订单模拟器
 function start(){
 	createArr();
 	mInterval=setInterval(mIncreaseFunction,1000);
 }
+//操作数据库
 function incrementNumber(num){
 	$.post(contextPath + '/lab/getDingdan', {num:num}, function (data) {
 		var rateMax =data[0].num;
@@ -259,19 +262,9 @@ function incrementNumber(num){
 	    
 	})
 }
+//自增处理
 function mIncreaseFunction(){
 	if(num<60){
-		/*  var pre=$(".bottom-1 .number .value").text();
-		 if(pre==NaN||pre=='NaN'){
-			 pre=0;
-		 }
-		 $(".bottom-1 .number .value").text(parseInt(pre)+parseInt(dataSecond[num]));
-		 $(".bottom-1 .YoY .value").text(3.5);
-		 if (parseFloat(change) > 0) {
-            $(".bottom-1 .YoY").addClass("up");
-         } else {
-         	$(".bottom-1 .YoY").addClass("down");
-         } */
          if(parseInt(dataSecond[num])>0){
         	 incrementNumber(parseInt(dataSecond[num]));
          }
@@ -282,6 +275,7 @@ function mIncreaseFunction(){
 		start();
 	}
 };
+//生成数组
 function createArr(){
 	dataSecond=[];
 	for(var x=0;x<60;x++){
@@ -300,27 +294,17 @@ function dealIndex(){
 		dataSecond[x]=1;
 	}
 }
+//随机数字
 function randomNumber(range){
 	range=parseInt(range);
 	var x=parseInt(range/10);
 	var y=parseInt(range)%10;
-	return parseInt(y*Math.random())+x*10;
+	if(isRandom){
+		return parseInt(y*Math.random())+x*10;
+	}else{
+		return orderNums;
+	}
+	
 }
-/* function incrementNumber(){
-	$.post(contextPath + '/lab/getDingdan', {}, function (data) {
-		var rateMax =data[0].num;
-        var rate = data[data.length-1].num;
-        var change = (parseFloat(rateMax) - parseFloat(rate)).toFixed(1);
-        var bilv=(change*100/parseFloat(rateMax)).toFixed(4)
-		$(".bottom-1 .value").text(rateMax);
-		 $(".bottom-1 .YoY .value").text(bilv);
-		 if (parseFloat(change) > 0) {
-            $(".bottom-1 .YoY").addClass("up");
-         } else {
-         	$(".bottom-1 .YoY").addClass("down");
-         }
-	    
-	})
-} */
 
 </script>
