为了更新代码

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -106,7 +106,7 @@
                                     </div>
 
                                     <div class="l-top-body" id="center_lab_top_div">
-                                        <div class="l-top-body-1"><h4>制冷器具性能室</h4>
+ <!--                                       <div class="l-top-body-1"><h4>制冷器具性能室</h4>
                                             <div class="item1">
                                                 <h5>实验室数量：</h5><span class="data">5</span>
                                             </div>
@@ -191,6 +191,7 @@
                                                 <span class="data">100%</span>
                                             </div>
                                         </div>
+ -->
                                     </div>
                                 </div>
                                 <!--第二行-->
@@ -644,3 +645,4 @@
             })
         })
     </script>
+</div>
