--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -230,23 +230,24 @@
 </div>
 <script src="${contextPath!}/static/js/cover.js"></script>
 <script>
-incrementNumber();
-function incrementNumber(){
-	$.post(contextPath + '/lab/getDingdan', {}, function (data) {
-		var rateMax =data[0].num;
-        var rate = data[data.length-1].num;
-        var change = (parseFloat(rateMax) - parseFloat(rate)).toFixed(1);
-        var bilv=(change*100/parseFloat(rateMax)).toFixed(4)
-		$(".bottom-1 .value").text(rateMax);
-		 $(".bottom-1 .YoY .value").text(bilv);
-		 if (parseFloat(change) > 0) {
-            $(".bottom-1 .YoY").addClass("up");
-         } else {
-         	$(".bottom-1 .YoY").addClass("down");
-         }
-		setTimeout(incrementNumber,1000);
-	    
-	})
-}
+    incrementNumber();
+
+    function incrementNumber() {
+        $.post(contextPath + '/lab/getDingdan', {}, function (data) {
+            var rateMax = data[0].num;
+            var rate = data[data.length - 1].num;
+            var change = (parseFloat(rateMax) - parseFloat(rate)).toFixed(1);
+            var bilv = (change * 100 / parseFloat(rateMax)).toFixed(4)
+            $(".bottom-1 .value").text(rateMax);
+            $(".bottom-1 .YoY .value").text(bilv);
+            if (parseFloat(change) > 0) {
+                $(".bottom-1 .YoY").addClass("up");
+            } else {
+                $(".bottom-1 .YoY").addClass("down");
+            }
+            setTimeout(incrementNumber, 1000);
+
+        })
+    }
 
 </script>
