--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -154,7 +154,7 @@ video {
         /* background-color:black;*/
         background: url(../img/bg-2.jpg) no-repeat;
     	background-size: 100% 100%;
-        overflow: hidden;
+        /*overflow: hidden;*/
        /*  animation-name: webEase;
         animation-duration: 2s;
         transition-timing-function: fast; */
